@@ -1414,6 +1414,10 @@ Wed May 14 13:05:49 CEST 2003
 	- Added more compatibility functions.
 	- Accept CPP defines for type definitions.
 	- Do not parse system include files automatically for Informix mode
+
+Fri May 16 11:45:50 CEST 2003
+
+	- Fixed include in pgtypeslib to not include c.h
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
